--- a/app/views/countries.html
+++ b/app/views/countries.html
@@ -1,23 +1,37 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <h1>Countries list</h1>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <h3> {{ testing }} </h3>
 </div>
+<ul>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="table-responsive" ng-if="countriesList.length">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <td>Code</td>
+                            <td>Name</td>
+                            <td>Profile</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="item in countriesList">
+                            <td> {{ item.iso_code }} </td>
+                            <td> {{ item.short_name }}</td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+
+                </table>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+</ul>
