--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -58,14 +58,6 @@ body {
   }
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
-}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
@@ -88,4 +80,8 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+#seach-box {
+  padding-bottom: 20px;
 }
