--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,9 +1,16 @@
 <div class="page-header">
-  <h1>Countries lists<small></small></h1>
+  <h1>Countries search<small></small></h1>
 </div>
 
 <div class="container-fluid">
     <div class="row">
+        <div id="seach-box" class="col-md-12">
+            <div class="input-group">
+                <input type="text" class="form-control" ng-model="countryName" ng-change="updatePage()" aria-describedby="icon-search">
+                <span class="input-group-addon" id="icon-search"><span class="glyphicon glyphicon-search"></span></span>
+            </div>
+        </div>
+
         <div class="col-md-12">
             <div class="table-responsive" ng-if="countriesList.length">
                 <table class="table table-hover">
@@ -23,12 +30,6 @@
                         </tr>
                     </tbody>
                 </table>
-                <button type="button" ng-click="prevPage()" class="btn" ng-if="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>  Prev
-
-                <button type="button" ng-click="nextPage()" class="btn pull-right" ng-if="next">
-                    Next <span class="glyphicon glyphicon-chevron-right"></span>
-                </button>
             </div>
         </div>
     </div>
