--- a/app/views/countries.html
+++ b/app/views/countries.html
@@ -6,19 +6,19 @@
     <div class="row">
         <div class="col-md-12">
             <div class="table-responsive" ng-if="countriesList.length">
-                <table class="table table-hover">
+                <table class="table table-hover table-countries">
                     <thead>
                         <tr>
-                            <td>Code</td>
-                            <td>Name</td>
-                            <td>Profile</td>
+                            <td class="isocode">Code</td>
+                            <td class="name">Name</td>
+                            <td class="link">Profile</td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="item in countriesList">
-                            <td> {{ item.iso_code }} </td>
-                            <td> {{ item.short_name }}</td>
-                            <td> <a ng-href="#/countries/{{ item.iso_code }}"> <span class="glyphicon glyphicon-globe"></span></a></td>
+                            <td class="isocode"> {{ item.iso_code }} </td>
+                            <td class="name"> {{ item.short_name }}</td>
+                            <td class="link"> <a ng-href="#/countries/{{ item.iso_code }}"> <span class="glyphicon glyphicon-globe"></span></a></td>
                             <!-- <td><a href="countries.html"></a></td> -->
                         </tr>
                     </tbody>
@@ -33,5 +33,3 @@
         </div>
     </div>
 </div>
-
-</ul>
