--- a/app/views/country.html
+++ b/app/views/country.html
@@ -1,11 +1,11 @@
+<circle-spinner ng-show="showSpinner"></circle-spinner>
+
 <div class="page-header">
   <h1>{{ country.short_name}} <br> <small>{{ country.formal_name }}</small></h1>
 </div>
 
-
 <div class="container-fluid country-detail">
     <div class="row">
-
         <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">Basic Information</h3>
