--- a/app/views/search.html
+++ b/app/views/search.html
@@ -11,6 +11,7 @@
             </div>
         </div>
 
+        <circle-spinner ng-show="showSpinner"></circle-spinner>
         <div class="col-md-12">
             <div class="table-responsive" ng-if="countriesList.length">
                 <table class="table table-hover table-countries">
