--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,18 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/logo.png" alt="Ordbogen"><br>
+    Frontend Implementation
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>Frontend Repository</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    <a href="https://github.com/xeBuz/OrdbogenFrontend">Follow the instructions to run the AngularJS project</a>
   </p>
 
-  <h4>Angular</h4>
+  <h4>Backend Repostory</h4>
   <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
+    <a href="https://github.com/xeBuz/Ordbogen">Follow the instructions to run the Flask project</a>
   </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
 </div>
