--- a/app/views/country/new.html
+++ b/app/views/country/new.html
@@ -180,6 +180,11 @@
                         <button type="submit" class="btn btn-primary btn-lg" tabindex="25">Create</button>
                         <circle-spinner ng-show="showSpinner"></circle-spinner>
                     </div>
+
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <br>
+                        <div ng-show="alert" class="alert alert-success" role="alert">New Country created</div>
+                    </div>
                 </div>
 
             </form>
