--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -18,7 +18,7 @@
                 <div class="form-group">
                     <label for="password" class="col-sm-2 control-label">Password</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="password" ng-model="user.password" placeholder="wordbook" required="true" tabindex="2">
+                        <input type="password" class="form-control" id="password" ng-model="user.password" placeholder="wordbook" required="true" tabindex="2">
                     </div>
                 </div>
 
@@ -28,7 +28,8 @@
                         <circle-spinner ng-show="showSpinner"></circle-spinner>
                     </div>
                     <div class="col-sm-6">
-                        <div ng-show="alert" class="alert alert-success" role="alert">Welcome {{ username }}</div>
+                        <div ng-show="alertOK" class="alert alert-success" role="alert">Welcome {{ username }}</div>
+                        <div ng-show="alertError" class="alert alert-danger" role="alert">Invalid user/password</div>
                     </div>
                 </div>
             </form>
